# fastapi-demo

./: main.py  pyproject.toml  requirements.txt
