[tool.poetry]
name = "law-backend"
version = "0.1.0"
description = ""
authors = ["Reuben-Stephen-John <reuben.sj2003@gmail.com>"]
readme = "README.md"
packages = [{include = "law_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
